--- a/cinnamon/dasboard-1.css
+++ b/cinnamon/dasboard-1.css
@@ -11,7 +11,7 @@
 
 /* Color of the navbar AFTER scroll */
 .navbar-scrolled {
-  background-color: #fff;
+  background-color: #100f0f;
 }
 
 /* An optional height of the navbar AFTER scroll */
